fixed scrolling issue, updated footer, spacing on contacts

--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 html {
     scroll-behavior: smooth; /* This should really be the default option. It's so much better */
+    overflow-x: hidden;
 }
 
 /* Main font stylings */
@@ -119,7 +120,7 @@ p {
     text-align: center;
     transition: 0.6s;
     border-radius: 10px;
-    margin-bottom: 78px;
+    margin-bottom: 64px;
     padding-top: 10px;
 }
 .contacts:hover {
@@ -166,6 +167,8 @@ p {
 .footer-text {
     font-family: 'Raleway', sans-serif;
     color: black;
+    font-weight: 600;
+    font-size: 28px;
 }
 
 /* Sidebar */
